--- a/sender.html
+++ b/sender.html
@@ -23,7 +23,7 @@
             <button class="start">Start</button>
         </div>
 
-        <div class="play-pause-container">
+        <div class="play-pause-container" id="playBtn">
             <button class="play-pause">
                 <i class="fa-solid fa-pause"></i>
                 <i class="fa-solid fa-play"></i>
