added Previous Btn

--- a/sender.html
+++ b/sender.html
@@ -38,7 +38,7 @@
 
             <div class="video-control">
                 <button id="nextBtn"><i class="fa-solid fa-forward"></i></button>
-                <button><i class="fa-solid fa-backward"></i></button>
+                <button id="previousBtn"><i class="fa-solid fa-backward"></i></button>
             </div>
         </div>
     </div>
