--- a/sender.html
+++ b/sender.html
@@ -33,7 +33,7 @@
         <div class="controls">
             <div class="sound">
                 <button><i class="fa-solid fa-volume-high"></i></button>
-                <button><i class="fa-solid fa-volume-low"></i></i></button>
+                <button id="lower-volume"><i class="fa-solid fa-volume-low"></i></i></button>
             </div>
 
             <div class="video-control">
