--- a/sender.html
+++ b/sender.html
@@ -32,7 +32,7 @@
 
         <div class="controls">
             <div class="sound">
-                <button><i class="fa-solid fa-volume-high"></i></button>
+                <button id="upper-volume"><i class="fa-solid fa-volume-high"></i></i></button>
                 <button id="lower-volume"><i class="fa-solid fa-volume-low"></i></i></button>
             </div>
 
