--- a/sender.html
+++ b/sender.html
@@ -16,7 +16,8 @@
 
     <div class="body-container">
         <div id="connectButton" class="power-on">
-            <button><i class="fa-solid fa-power-off"></i></button>
+            <button>Connection au chrome cast</button>
+            <!-- <i class="fa-solid fa-power-off"></i> -->
         </div>
 
         <div id="startBtn">
