--- a/sender.html
+++ b/sender.html
@@ -16,8 +16,7 @@
 
     <div class="body-container">
         <div id="connectButton" class="power-on">
-            <button>Connection au chrome cast</button>
-            <!-- <i class="fa-solid fa-power-off"></i> -->
+            <button><i class="fa-solid fa-power-off"></i></button>
         </div>
 
         <div id="startBtn">
