--- a/sender.html
+++ b/sender.html
@@ -17,14 +17,18 @@
 
     <div class="body-container">
 
-        
+        <script>
+
+        </script>
+
+
         <div id="connectButton" class="power-on">
             <button>Cast</button>
             <!-- <i class="fa-solid fa-power-off"></i> -->
         </div>
 
-        <div id="startBtn">
-            <button class="start">Start</button>
+        <div>
+            <button id="startBtn" class="start">Start</button>
         </div>
 
         <div class="play-pause-container" id="playBtn">
@@ -50,7 +54,7 @@
     <div class="info">
         <button type="button" style="font-size: 24px;" class="btn btn-warning" id="helpBtn">HELP</button>
         <ul id="instructionList" class="instruction-list">
-            <li> </li>
+            <li></li>
             <li></li>
             <li></li>
             
