--- a/sender-OLW-S025-00-07.html
+++ b/sender-OLW-S025-00-07.html
@@ -39,12 +39,9 @@
         </div>
 
         <div class="controls">
-            <div id="currentVolumeContainer">
-                <h2 id="currentVolume">45</h2>
-            </div>
             <div class="sound">
                 <button id="upper-volume"><i class="fa-solid fa-volume-high"></i></i></button>
-                
+                <h1 id="currentVolume"></h1>
                 <button id="lower-volume"><i class="fa-solid fa-volume-low"></i></i></button>
                 
             </div>
