--- a/sender.html
+++ b/sender.html
@@ -23,12 +23,11 @@
 
 
         <div id="connectButton" class="power-on">
-            <button>Cast</button>
-            <!-- <i class="fa-solid fa-power-off"></i> -->
+            <button><i class="fa-brands fa-chromecast"></i></button>
         </div>
 
         <div>
-            <button id="startBtn" class="start">Start</button>
+            <button id="startBtn" class="start"><i class="fa-solid fa-power-off"></i></button>
         </div>
 
         <div class="play-pause-container" id="playBtn">
