--- a/sender.html
+++ b/sender.html
@@ -26,7 +26,7 @@
             <button><i class="fa-brands fa-chromecast"></i></button>
         </div>
 
-        <div>
+        <div id="startBtn-container">
             <button id="startBtn" class="start"><i class="fa-solid fa-power-off"></i></button>
         </div>
 
