--- a/sender.html
+++ b/sender.html
@@ -66,7 +66,9 @@
     </div>
 
     <div>
-        <input id="volume-range" type="range" min="1" max="25" value="10"/>
+        <div>
+            <button id="mute">Mute button</button>
+        </div>
     </div>
     <script src="CastVideos.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
