--- a/sender.html
+++ b/sender.html
@@ -58,10 +58,13 @@
     <div class="info">
         <button type="button" style="font-size: 24px;" class="btn btn-warning" id="helpBtn">HELP</button>
         <ul id="instructionList" class="instruction-list">
-            <li></li>
-            <li></li>
-            <li></li>
-            
+            <li> Click droit sur n'importe quelle section</li>
+            <li> Selectionner Cast</li>
+            <li> Selctionner un écran pour votre essai</li>
+            <li> Cliquer sur Icone cast</li>  
+            <li> Cliquer sur Icone Power</li>  
+            <li> À vous de jouer ! ></li>  
+ 
         </ul>
     </div>
 
