replaced mute button

--- a/sender.html
+++ b/sender.html
@@ -17,13 +17,9 @@
 
     <div class="body-container">
 
-        <script>
-
-        </script>
-
-
         <div id="connectButton" class="power-on">
             <button><i class="fa-brands fa-chromecast"></i></button>
+            <button id="mute"><i class="fa-solid fa-volume-xmark"></i></button>
         </div>
 
         <div id="startBtn-container">
@@ -60,13 +56,12 @@
             <li> Cliquer sur Icone cast</li>  
             <li> Cliquer sur Icone Power</li>  
             <li> À vous de jouer ! ></li>  
- 
         </ul>
     </div>
 
     <div>
         <div>
-            <button id="mute">Mute button</button>
+            
         </div>
     </div>
     <script src="CastVideos.js" type="module"></script>
