--- a/sender.html
+++ b/sender.html
@@ -19,6 +19,8 @@
 
         <div id="connectButton" class="power-on">
             <button><i class="fa-brands fa-chromecast"></i></button>
+        </div>
+        <div>
             <button id="mute"><i class="fa-solid fa-volume-xmark"></i></button>
         </div>
 
