--- a/sender.html
+++ b/sender.html
@@ -17,12 +17,13 @@
 
     <div class="body-container">
 
-        <div id="connectButton" class="power-on">
-            <div>
-                <button><i class="fa-brands fa-chromecast"></i></button>
+        <div id="topButton">
+            <div id="connectButton" class="power-on">
+                    <button><i class="fa-brands fa-chromecast"></i></button>
             </div>
             <button id="mute"><i class="fa-solid fa-volume-xmark"></i></button>
         </div>
+        
 
         <div id="startBtn-container">
             <button id="startBtn" class="start"><i class="fa-solid fa-power-off"></i></button>
