--- a/sender.html
+++ b/sender.html
@@ -21,6 +21,7 @@
             <div id="connectButton" class="power-on">
                     <button><i class="fa-brands fa-chromecast"></i></button>
             </div>
+            <button id="mute"><i class="fa-solid fa-volume-xmark"></i></button>
         </div>
         
 
