--- a/telecommande/sender.html
+++ b/telecommande/sender.html
@@ -29,8 +29,7 @@
     
             <div class="play-pause-container" id="playBtn">
                 <button class="play-pause">
-                    <i class="fa-solid fa-pause"></i>
-                    <i class="fa-solid fa-play"></i>
+                    <i class="fa-solid fa-pause" id="playIcon"></i>
                 </button> 
             </div>
     
